Use DEBUG level for logging service exceptions